--- a/3d_engineering/index.html
+++ b/3d_engineering/index.html
@@ -16,6 +16,8 @@
 
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+                <!-- Uncomment this and call this url with 'index.html?print-pdf'. Then ctrl-p and print as pdf to save -->
+                <!--<link rel="stylesheet" href="css/print/pdf.css">-->
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
