[seoul_tech_intro_to_robots] switch to google drive links for github io

--- a/seoul_tech_robotics/index.html
+++ b/seoul_tech_robotics/index.html
@@ -292,6 +292,8 @@
 	                    <p class="fragment"><text style="color:cyan">You are not embarrased about smelling, talking to your robot!</text></p>
 	                    <br/>
 	                    <p class="fragment"><text style="color:cyan">Dirty jobs betwixt challenges are ok, it completes the picture</text></p>
+                        <br/>
+                        <p class="fragment"><text style="color:cyan">You like to be involved in the direction it takes</text></p>
 	                    <aside class="notes">
 	                        xxx
 	                    </aside>
@@ -361,10 +363,10 @@
                     </section>
                     <section id="GocartIFA">
                         <h2>GoCart@IFA</h2>
-                        <video width="640" height="480" controls><source src="gocart/gocart_beer_delivery.mov" type="video/mp4"></video>
                         <!-- 
-                        <iframe id=gocart_video" src="https://docs.google.com/a/yujinrobot.com/file/d/0B4zstYGigNdQaU5xY0syb1hkTWs/preview" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
+                        <video width="640" height="480" controls><source src="videos/gocart_beer_delivery.mov" type="video/mp4"></video>
                          -->
+                        <iframe id=gocart_video" src="https://docs.google.com/a/yujinrobot.com/file/d/0B4zstYGigNdQaU5xY0syb1hkTWs/preview" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
                         <aside class="notes">
                             xxx
                         </aside>
@@ -392,7 +394,10 @@
                     </section>
                     <section id="Technology">
                         <h2>Technology</h2>
-                        <video width="640" height="480" controls><source src="gocart/dslam.mp4" type="video/mp4"></video>
+                        <video width="640" height="480" controls><source src="videos/dslam.mp4" type="video/mp4"></video>
+                        <!--
+                        <iframe id=gocart_video" src="https://docs.google.com/a/yujinrobot.com/file/d/0B8mdSXUGwxixMTJMdENwVTZRSjA/preview" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
+                         -->
                         <aside class="notes">
                             xxx
                         </aside>
